--- a/assests/pages/tour.html
+++ b/assests/pages/tour.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/styles.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Tour</title>
 </head>
 
@@ -24,7 +24,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
                         <a class="nav-link" href="galeria.html">Galeria</a>
                         <a class="nav-link" href="tour.html">Tour</a>
                         <a class="nav-link" href="discografia.html">Discografia</a>
