--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora el mundo musical de Twenty One Pilots. Descubre nuestro merch, galería de fotos, próximos conciertos y la evolución constante de nuestra música.">
+    <meta name="keywords" content="Twenty One Pilots, Banda musical, letras profundas, música emocional, conciertos, Tyler Joseph, Josh Dun, Blurryface, Trench, Vessel, Scaled And Icy, musica alternativa"
     <link rel="shortcut icon" href="/images/twenty-one-pilots-logo-4AA8D8F6B7-seeklogo.com.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--link al css-->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Twenty One Pilots</title>
 </head>
 
@@ -29,10 +32,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" aria-current="page" href="#">Inicio</a>
-                        <a class="nav-link" href="pages/galeria.html">Galeria</a>
-                        <a class="nav-link" href="pages/tour.html">Tour</a>
-                        <a class="nav-link" href="pages/discografia.html">Discografia</a>
-                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                        <a class="nav-link" href="/assests/pages/galeria.html">Galeria</a>
+                        <a class="nav-link" href="/assests/pages/tour.html">Tour</a>
+                        <a class="nav-link" href="/assests/pages/discografia.html">Discografia</a>
+                        <a class="nav-link" href="/assests/pages/contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -60,33 +63,33 @@
             </section>
 
             <section class="inicio-derecha">
-                <img class="imageninicio" src="./images/twentyinicio.png" alt="imagen-de-twenty-one-pilots">
+                <img class="imageninicio" src="assests/images/twentyinicio.png" alt="imagen-de-twenty-one-pilots">
             </section>
         </div>
 
 
         <section class="cards">
-            <h2 class="titulomerch">MERCHANDASING</h2>
-            <article class="card_body">
-                <img src="https://pbs.twimg.com/media/EyZe28hWgAI-4Vs.jpg" alt="">
+            <h1 class="titulomerch">MERCHANDASING</h1>
+            <article class="card_body" data-aos="fade-right">
+                <img src="https://pbs.twimg.com/media/EyZe28hWgAI-4Vs.jpg" alt="imagen de hoodie scaled and icy">
                 <h2>Scaled And Icy Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
-            <article class="card_body">
-                <img src="https://i.pinimg.com/originals/05/c8/3f/05c83fc125b92d7d4ad8e0548e35dccc.jpg" alt="">
+            <article class="card_body" data-aos="fade-left">
+                <img src="https://i.pinimg.com/originals/05/c8/3f/05c83fc125b92d7d4ad8e0548e35dccc.jpg" alt="imagen de hoodie trench amarillo">
                 <h2>Trench Yellow Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
-            <article class="card_body">
-                <img src="https://i.pinimg.com/originals/32/7f/6c/327f6cc8511694baa6da494d94652a90.jpg" alt="">
+            <article class="card_body" data-aos="fade-right">
+                <img src="https://i.pinimg.com/originals/32/7f/6c/327f6cc8511694baa6da494d94652a90.jpg" alt="imagen de hoodie top">
                 <h2>Twenty One Pilots Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
-            <article class="card_body">
-                <img src="https://http2.mlstatic.com/D_NQ_NP_964649-MLA54321494863_032023-O.webp" alt="">
+            <article class="card_body" data-aos="fade-left">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_964649-MLA54321494863_032023-O.webp" alt="imagen de hoodie trench">
                 <h2>Trench Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
@@ -113,6 +116,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init();</script>
+
 </body>
 
 </html>
