agregue sass y animaciones

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora el mundo musical de Twenty One Pilots. Descubre nuestro merch, galería de fotos, próximos conciertos y la evolución constante de nuestra música.">
-    <meta name="keywords" content="Twenty One Pilots, Banda musical, letras profundas, música emocional, conciertos, Tyler Joseph, Josh Dun, Blurryface, Trench, Vessel, Scaled And Icy, musica alternativa"
-    <link rel="shortcut icon" href="/images/twenty-one-pilots-logo-4AA8D8F6B7-seeklogo.com.png" type="image/x-icon">
+    <meta name="description"
+        content="Explora el mundo musical de Twenty One Pilots. Descubre nuestro merch, galería de fotos, próximos conciertos y la evolución constante de nuestra música.">
+    <meta name="keywords"
+        content="Twenty One Pilots, Banda musical, letras profundas, música emocional, conciertos, Tyler Joseph, Josh Dun, Blurryface, Trench, Vessel, Scaled And Icy, musica alternativa"
+        <link rel="shortcut icon" href="/images/twenty-one-pilots-logo-4AA8D8F6B7-seeklogo.com.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--link al css-->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Twenty One Pilots</title>
 </head>
 
@@ -76,19 +79,22 @@
             </article>
 
             <article class="card_body" data-aos="fade-left">
-                <img src="https://i.pinimg.com/originals/05/c8/3f/05c83fc125b92d7d4ad8e0548e35dccc.jpg" alt="imagen de hoodie trench amarillo">
+                <img src="https://i.pinimg.com/originals/05/c8/3f/05c83fc125b92d7d4ad8e0548e35dccc.jpg"
+                    alt="imagen de hoodie trench amarillo">
                 <h2>Trench Yellow Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
             <article class="card_body" data-aos="fade-right">
-                <img src="https://i.pinimg.com/originals/32/7f/6c/327f6cc8511694baa6da494d94652a90.jpg" alt="imagen de hoodie top">
+                <img src="https://i.pinimg.com/originals/32/7f/6c/327f6cc8511694baa6da494d94652a90.jpg"
+                    alt="imagen de hoodie top">
                 <h2>Twenty One Pilots Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
             <article class="card_body" data-aos="fade-left">
-                <img src="https://http2.mlstatic.com/D_NQ_NP_964649-MLA54321494863_032023-O.webp" alt="imagen de hoodie trench">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_964649-MLA54321494863_032023-O.webp"
+                    alt="imagen de hoodie trench">
                 <h2>Trench Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
