hice las correcciones de la tercer entrega

--- a/assests/pages/galeria.html
+++ b/assests/pages/galeria.html
@@ -4,14 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon para identificar el sitio web en la pestaña del navegador -->
+    <link rel="shortcut icon" href="../images/Twenty_one_pilots_logo_.jpg" type="image/x-icon">
+    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--link al css-->
     <link rel="stylesheet" href="../../css/style.css">
+    <!-- Título de la página-->
     <title>Galeria</title>
 </head>
+<!-- body= Contenido principal de la página -->
 
 <body>
-
+    <!--header = encabezado del sitio web-->
     <header>
         <!--nav= menu de navegación-->
         <nav class="navbar navbar-expand-lg bg-body-primary">
@@ -36,31 +42,32 @@
 
 
     </header>
-
+    <!--main = al contenido principal de este html-->
     <main>
         <div class="fotosgaleria">
             <h2>Galeria</h2>
             <div class="imagenes">
-                <img src="../images/galeria1.jpg" alt="Twenty One Pilots" class="imageng">
-                <img src="../images/galeria2.jpg" alt="Twenty One Pilots 2" class="imageng">
-                <img src="../images/galeria3.jpg" alt="Twenty One Pilots 3" class="imageng">
-                <img src="../images/galeria4.jpg" alt="Twenty One Pilots 4" class="imageng">
-                <img src="../images/galeria5.jpg" alt="Twenty One Pilots 5" class="imageng">
-                <img src="../images/galeria6.jpg" alt="Twenty One Pilots 6" class="imageng">
-                <img src="../images/galeria7.jpg" alt="Twenty One Pilots 7" class="imageng">
-                <img src="../images/galeria8.jpg" alt="Twenty One Pilots 8" class="imageng">
-                <img src="../images/galeria9.png" alt="Twenty One Pilots 9" class="imageng">
+                <img src="../images/galeria1.jpg" alt="Tyler-y-josh-era-trench" class="imageng">
+                <img src="../images/galeria2.jpg" alt="Tyler-y-josh-era-blurryface" class="imageng">
+                <img src="../images/galeria3.jpg" alt="Tyler-y-josh-era-scaled-and-icy" class="imageng">
+                <img src="../images/galeria4.jpg" alt="tyler-y-josh-sentados" class="imageng">
+                <img src="../images/galeria5.jpg" alt="tyler-y-josh-en-video-musical-chlorine" class="imageng">
+                <img src="../images/galeria6.jpg" alt="tyler-y-josh-blurryface" class="imageng">
+                <img src="../images/galeria7.jpg" alt="Tyler-tocando-el-piano-en-vivo" class="imageng">
+                <img src="../images/galeria8.jpg" alt="tyler-y-josh-encima-del-publico" class="imageng">
+                <img src="../images/galeria9.png" alt="josh-haciendo-un-backflip" class="imageng">
             </div>
 
         </div>
     </main>
-
+    <!--footer = al pie de pagina de este html-->
     <footer id="footer">
         <div class="footer-contenedor text-light text-center ">
             <p class="display-5 mb-3 ">TWENTYONEPILOTS</p>
             <small class="text-white-50">&copy; Copyright by Julian Bouzas. All rights reserved.</small>
         </div>
     </footer>
+    <!-- Script de Bootstrap para habilitar la funcionalidad de los componentes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
