--- a/assests/pages/contacto.html
+++ b/assests/pages/contacto.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon para identificar el sitio web en la pestaña del navegador -->
+    <link rel="shortcut icon" href="../images/Twenty_one_pilots_logo_.jpg" type="image/x-icon">
+    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--link al css-->
     <link rel="stylesheet" href="../../css/style.css">
     <title>Contacto</title>
 </head>
+<!-- body= Contenido principal de la página -->
 
 <body>
-
+    <!--header = encabezado del sitio web-->
     <header>
         <!--nav= menu de navegación-->
         <nav class="navbar navbar-expand-lg bg-body-primary">
@@ -35,12 +40,12 @@
         </nav>
 
     </header>
-
+    <!--main = al contenido principal de este html-->
     <main class="formulario">
         <h1>Contacto</h1>
         <p>Tu opinión es fundamental para mejorar y brindarte la mejor experiencia posible.</p>
         <!--mehotd=POST= ENVIAR DATOS - GET= TRAER DATOS-->
-
+        <!-- form= formulario de registro de usuarios -->
         <form action method="GET" enctype="multipart/form-data">
 
             <input type="text" name="Nombre" placeholder="Nombre">
@@ -53,12 +58,14 @@
 
         </form>
     </main>
+    <!--footer = al pie de pagina de este html-->
     <footer id="footer">
         <div class="footer-contenedor text-light text-center ">
             <p class="display-5 mb-3 ">TWENTYONEPILOTS</p>
             <small class="text-white-50">&copy; Copyright by Julian Bouzas. All rights reserved.</small>
         </div>
     </footer>
+    <!-- Script de Bootstrap para habilitar la funcionalidad de los componentes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
