--- a/assests/pages/discografia.html
+++ b/assests/pages/discografia.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon para identificar el sitio web en la pestaña del navegador -->
+    <link rel="shortcut icon" href="../images/Twenty_one_pilots_logo_.jpg" type="image/x-icon">
+    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--link al css-->
     <link rel="stylesheet" href="../../css/style.css">
     <title>Discografia</title>
 </head>
 
+<!-- body= Contenido principal de la página -->
+
 <body>
+    <!--header = encabezado del sitio web-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-primary">
             <div class="container-fluid">
@@ -32,11 +39,14 @@
             </div>
         </nav>
     </header>
+    <!--main = al contenido principal de este html-->
     <main class="discografia">
         <h2>Discografia</h2>
-        <p>Estos son los discos de Twenty One Pilots, donde su variada mezcla de géneros y letras profundas han dejado una huella indeleble en la escena musical contemporánea.</p>
+        <p>Estos son los discos de Twenty One Pilots, donde su variada mezcla de géneros y letras profundas han dejado
+            una huella indeleble en la escena musical contemporánea.</p>
         <section>
             <div class="cardspotify">
+                <!-- iframe con reproductor de Spotify para los álbumes de twenty one pilots" -->
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/1Fexc96V24RL17Ko9VXUOM?utm_source=generator" width="340px"
                     height="500" frameBorder="0" allowfullscreen=""
@@ -65,12 +75,14 @@
             </div>
         </section>
     </main>
+    <!--footer = al pie de pagina de este html-->
     <footer id="footer">
         <div class="footer-contenedor text-light text-center ">
             <p class="display-5 mb-3 ">TWENTYONEPILOTS</p>
             <small class="text-white-50">&copy; Copyright by Julian Bouzas. All rights reserved.</small>
         </div>
     </footer>
+    <!-- Script de Bootstrap para habilitar la funcionalidad de los componentes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
