--- a/assests/pages/tour.html
+++ b/assests/pages/tour.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon para identificar el sitio web en la pestaña del navegador -->
+    <link rel="shortcut icon" href="../images/Twenty_one_pilots_logo_.jpg" type="image/x-icon">
+    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!--link al css-->
     <link rel="stylesheet" href="../../css/style.css">
     <title>Tour</title>
 </head>
 
 <body>
-
+    <!--header = encabezado del sitio web-->
     <header>
         <!--nav= menu de navegación-->
         <nav class="navbar navbar-expand-lg bg-body-primary">
@@ -36,7 +40,7 @@
 
 
     </header>
-
+    <!--main = al contenido principal de este html-->
     <main>
         <div class="fondotour">
             <img src="../images/fondotour.jpg" alt="fondotour">
@@ -46,7 +50,9 @@
             <h2 id="icytour">TWENTY ONE PILOTS | THE ICY TOUR</h2>
             <h2>FECHAS</h2>
             <div class="fechas">
+                <!--ul= lista-->
                 <ul>
+                    <!--li= elementos de la lista-->
                     <li>
                         VIE, 15 SEP, 2023
                     </li>
@@ -110,13 +116,14 @@
 
         </section>
     </main>
-
+    <!--footer = al pie de pagina de este html-->
     <footer id="footer">
         <div class="footer-contenedor text-light text-center ">
             <p class="display-5 mb-3 ">TWENTYONEPILOTS</p>
             <small class="text-white-50">&copy; Copyright by Julian Bouzas. All rights reserved.</small>
         </div>
     </footer>
+    <!-- Script de Bootstrap para habilitar la funcionalidad de los componentes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
