--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 
 <head>
+    <!-- Metadatos para mejorar la optimización de motores de búsqueda y accesibilidad -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Explora el mundo musical de Twenty One Pilots. Descubre nuestro merch, galería de fotos, próximos conciertos y la evolución constante de nuestra música.">
     <meta name="keywords"
-        content="Twenty One Pilots, Banda musical, letras profundas, música emocional, conciertos, Tyler Joseph, Josh Dun, Blurryface, Trench, Vessel, Scaled And Icy, musica alternativa"
-        <link rel="shortcut icon" href="/images/twenty-one-pilots-logo-4AA8D8F6B7-seeklogo.com.png" type="image/x-icon">
+        content="Twenty One Pilots, Banda musical, letras profundas, música emocional, conciertos, Tyler Joseph, Josh Dun, Blurryface, Trench, Vessel, Scaled And Icy, musica alternativa">
+    <!-- Favicon para identificar el sitio web en la pestaña del navegador -->
+    <link rel="shortcut icon" href="assests/images/Twenty_one_pilots_logo_.jpg" type="image/x-icon">
+    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- Enlace a la biblioteca AOS para animaciones en el desplazamiento -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--link al css-->
     <link rel="stylesheet" href="css/style.css">
     <title>Twenty One Pilots</title>
 </head>
+<!-- body= Contenido principal de la página -->
 
 <body>
 
@@ -65,7 +70,7 @@
             </section>
 
             <section class="inicio-derecha">
-                <img class="imageninicio" src="assests/images/twentyinicio.png" alt="imagen-de-twenty-one-pilots">
+                <img class="imageninicio" src="assests/images/twentyinicio.png" alt="imagen-de-tyler-y-josh">
             </section>
         </div>
 
@@ -73,28 +78,28 @@
         <section class="cards">
             <h1 class="titulomerch">MERCHANDASING</h1>
             <article class="card_body" data-aos="fade-right">
-                <img src="https://pbs.twimg.com/media/EyZe28hWgAI-4Vs.jpg" alt="imagen de hoodie scaled and icy">
+                <img src="https://pbs.twimg.com/media/EyZe28hWgAI-4Vs.jpg" alt="imagen-de-hoodie-scaled-and-icy">
                 <h2>Scaled And Icy Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
             <article class="card_body" data-aos="fade-left">
                 <img src="https://i.pinimg.com/originals/05/c8/3f/05c83fc125b92d7d4ad8e0548e35dccc.jpg"
-                    alt="imagen de hoodie trench amarillo">
+                    alt="imagen-de-hoodie-trench-amarillo">
                 <h2>Trench Yellow Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
             <article class="card_body" data-aos="fade-right">
                 <img src="https://i.pinimg.com/originals/32/7f/6c/327f6cc8511694baa6da494d94652a90.jpg"
-                    alt="imagen de hoodie top">
+                    alt="imagen-de-hoodie-top-color-negro">
                 <h2>Twenty One Pilots Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
 
             <article class="card_body" data-aos="fade-left">
                 <img src="https://http2.mlstatic.com/D_NQ_NP_964649-MLA54321494863_032023-O.webp"
-                    alt="imagen de hoodie trench">
+                    alt="imagen-de-hoodie-trench-color-negro">
                 <h2>Trench Hoodie</h2>
                 <p>$50.00 USD</p>
             </article>
@@ -118,10 +123,11 @@
             <small class="text-white-50">&copy; Copyright by Julian Bouzas. All rights reserved.</small>
         </div>
     </footer>
+    <!-- Script de Bootstrap para habilitar la funcionalidad de los componentes -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-
+    <!-- Script de AOS para animaciones en el desplazamiento -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script> AOS.init();</script>
 
